--- a/themes/skycoin/layouts/partials/footer.html
+++ b/themes/skycoin/layouts/partials/footer.html
@@ -1,7 +1,7 @@
-  <footer>
-    {{ with .Site.Params.footer }}
-    {{ . | markdownify }}
+  <footer class="footer">
+    {{ range .Site.Menus.footer }}
+      <a class="footer__link" href="{{ .URL }}">{{ .Name }}</a>
     {{ end }}
   </footer>
-  </body>
+</body>
 </html>
