refactor: link target for RSS

--- a/themes/skycoin/layouts/partials/header.html
+++ b/themes/skycoin/layouts/partials/header.html
@@ -12,7 +12,7 @@
     <div class="header__wrapper">
       <div class="header__topnav">
         <a href="https://skycoin.net" class="header__link">&larr; skycoin.net</a>
-        <a href="{{ .Site.Params.rss }}" class="btn btn--pill btn--outline btn--blue">Subscribe (RSS)</a>
+        <a href="{{ .Site.Params.rss }}" target="_blank" class="btn btn--pill btn--outline btn--blue">Subscribe (RSS)</a>
       </div>
 
       <img class="logo" alt="Skycoin Blog" src="{{ "/images/logo-outlined.svg" | relURL }}" />
