--- a/themes/skycoin/layouts/_default/list.html
+++ b/themes/skycoin/layouts/_default/list.html
@@ -1,16 +1,18 @@
 {{ partial "header.html" . }}
 
-<h1>{{ .Title }}</h1>
+<main class="list">
+    {{ if .Title }}
+      <h1 class="list__title">{{ .Title }}</h1>
+    {{ end }}
 
-{{ .Content }}
+    <ul class="list__list">
+      {{ range (where .Data.Pages "Section" "!=" "") }}
+        <li class="list__item">
+          <a class="list__link" href="{{ .URL }}">{{ .Title }}</a>
+          <span class="list__meta">{{ .Date.Format "Jan 2 2006" }}</span>
+        </li>
+      {{ end }}
+    </ul>
+  </main>
 
-<ul>
-  {{ range (where .Data.Pages "Section" "!=" "") }}
-  <li>
-    <span>{{ .Date.Format "2006/01/02" }}</span>
-    <a href="{{ .URL }}">{{ .Title }}</a>
-  </li>
-  {{ end }}
-</ul>
-
-{{ partial "footer.html" . }}
+  {{ partial "footer.html" . }}
