--- a/themes/skycoin/static/css/scss/_list.scss
+++ b/themes/skycoin/static/css/scss/_list.scss
@@ -12,11 +12,11 @@
   &__list {
     list-style-type: none;
     margin-left: 0;
-    border-top: solid 2px #eceef0;
+    border-top: solid 2px $light-gray;
   }
 
   &__item {
-    border-bottom: solid 2px #eceef0;
+    border-bottom: solid 2px $light-gray;
     padding-bottom: 1.75rem;
     padding-top: 1.75rem;
     display: flex;
