--- a/themes/skycoin/static/css/scss/_post.scss
+++ b/themes/skycoin/static/css/scss/_post.scss
@@ -2,11 +2,13 @@
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 
-  p {
+  & > * {
     @include container($container-width-base);
+  }
+
+  p {
     line-height: 1.65;
     font-size: 1.0625rem;
-    color: $black;
     margin-bottom: 2rem;
   }
 
@@ -18,6 +20,29 @@
 
     @media (min-width: $container-width-large){
       width: auto;
+    }
+  }
+
+  hr {
+    border: 0;
+    height: 2px;
+    background-color: $light-gray;
+    margin-bottom: 2rem;
+  }
+
+  ul {
+    li {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  blockquote {
+    border-left: 5px solid $light-gray;
+    padding: 3px 1rem 3px;
+    margin-bottom: 2rem;
+
+    p {
+      margin: 0;
     }
   }
 }
