--- a/themes/skycoin/static/css/scss/_header.scss
+++ b/themes/skycoin/static/css/scss/_header.scss
@@ -13,6 +13,7 @@
 
   &__topnav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -20,5 +21,11 @@
 
   &__link {
     font-size: 0.9375rem;
+    margin-right: 0.5rem;
+    padding-bottom: 1rem;
+
+    @media (min-width: $breakpoint-xs) {
+      padding-bottom: 0;
+    }
   }
 }
