--- a/themes/skycoin/static/css/scss/_post.scss
+++ b/themes/skycoin/static/css/scss/_post.scss
@@ -2,7 +2,7 @@
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 
-  & > * {
+  &__content {
     @include container($container-width-base);
   }
 
@@ -13,14 +13,9 @@
   }
 
   img {
-    @include container($container-width-large, false);
     display: block;
     width: 100%;
     margin-bottom: 2.5rem;
-
-    @media (min-width: $container-width-large){
-      width: auto;
-    }
   }
 
   hr {
