refactor: 404 page layout and design

--- a/themes/skycoin/layouts/404.html
+++ b/themes/skycoin/layouts/404.html
@@ -1,5 +1,8 @@
 {{ partial "header.html" . }}
 
-404 NOT FOUND
+<main class="not-found">
+  <h1 class="not-found__title">Page not found</h1>
+  <a href="/" class="btn btn--outline btn--blue">Skycoin blog</a>
+</main>
 
 {{ partial "footer.html" . }}
