refactor: temp remove toc

--- a/themes/skycoin/static/css/scss/_post.scss
+++ b/themes/skycoin/static/css/scss/_post.scss
@@ -26,9 +26,16 @@
   }
 
   ul {
+    padding-left: 1rem;
+    margin-bottom: 2rem;
+
     li {
       margin-bottom: 0.5rem;
     }
+  }
+
+  nav ul {
+    display: none;
   }
 
   blockquote {
