--- a/themes/skycoin/layouts/_default/list.html
+++ b/themes/skycoin/layouts/_default/list.html
@@ -8,7 +8,7 @@
     <ul class="list__list">
       {{ range (where .Data.Pages "Section" "!=" "") }}
         <li class="list__item">
-          <a class="list__link" href="{{ .URL }}">{{ .Title }}</a>
+          <a class="list__link" href="{{ .URL | relLangURL }}">{{ .Title }}</a>
           <span class="list__meta">{{ .Date.Format "Jan 2 2006" }}</span>
         </li>
       {{ end }}
