--- a/themes/skycoin/layouts/_default/terms.html
+++ b/themes/skycoin/layouts/_default/terms.html
@@ -8,7 +8,7 @@
     <ul class="list__list">
       {{ range $key, $value := .Data.Terms }}
         <li class="list__item">
-          <a class="list__link" href="{{ (print "/" $.Data.Plural "/" $key) | urlize | relURL }}">{{ $key }}</a>
+          <a class="list__link" href="{{ (print "/" $.Data.Plural "/" $key) | urlize | relLangURL }}">{{ $key }}</a>
           <span class="list__meta">{{ len $value }} post{{ if gt (len $value) 1}}s{{ end }}</span>
         </li>
       {{ end }}
