--- a/themes/skycoin/layouts/partials/header.html
+++ b/themes/skycoin/layouts/partials/header.html
@@ -22,7 +22,7 @@
       <nav class="nav">
         {{ $currentPage := . }}
         {{ range .Site.Menus.main }}
-          <a class="nav__item {{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}nav__item--active{{end}}" href="{{ .URL }}">{{ .Name }}</a>
+          <a class="nav__item {{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}nav__item--active{{end}}" href="{{ .URL | relLangURL }}">{{ .Name }}</a>
         {{ end }}
       </nav>
     </div>
