feat: add language dropdown

--- a/themes/skycoin/static/css/scss/_header.scss
+++ b/themes/skycoin/static/css/scss/_header.scss
@@ -1,6 +1,78 @@
 .header {
   background-image: linear-gradient(280deg, $light-gray, $white);
 
+  &-dropdown {
+    position: relative;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  &-dropdown__current {
+    color: $blue;
+    cursor: pointer;
+
+    &::after {
+      content: '';
+      display: inline-block;
+      margin-left: 6px;
+      width: 0;
+      height: 0;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-top: 8px solid;
+    }
+
+    &:hover {
+        color: #000;
+    }
+  }
+
+  &-dropdown__list {
+    position: absolute;
+    top: 26px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 160px;
+    text-align: center;
+    border-radius: 6px;
+    border: 1px solid $light-gray;
+    background: #fff;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .2s ease-in-out;
+
+    &_show {
+        opacity: 1;
+        visibility: visible;
+    }
+  }
+
+  &-dropdown__item {
+    display: block;
+    padding: 0.5rem;
+    border-bottom: 1px solid $light-gray;
+    will-change: background-color;
+    transition: background-color .2s ease-in-out;
+    text-decoration: none;
+
+    &:hover {
+      background-color: $light-gray;
+      text-decoration: none;
+    }
+
+    &:last-of-type {
+      border-bottom: none;
+    }
+
+    &_active {
+      background-color: darken($light-gray, 5%);
+
+      &:hover {
+        background-color: darken($light-gray, 5%);
+      }
+    }
+  }
+
   &__wrapper {
     @include container($container-width-base);
     padding-top: 2.25rem;
