Move twitter analytics to bottom, check if not loaded

--- a/themes/skycoin/layouts/partials/footer.html
+++ b/themes/skycoin/layouts/partials/footer.html
@@ -12,5 +12,18 @@
       {{ end }}
     </div>
   </footer>
+
+  {{ if .Site.Params.TwitterAnalytics }}
+    <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    if (twttr !== undefined) {
+      twttr.conversion.trackPid('{{ .Site.Params.TwitterAnalytics }}', { tw_sale_amount: 0, tw_order_quantity: 0 });
+    } </script>
+    <noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id={{ .Site.Params.TwitterAnalytics }}&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+    <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id={{ .Site.Params.TwitterAnalytics }}&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+    </noscript>
+  {{ end }}
+
 </body>
 </html>
