Add translation bounty; add image to skywire post

--- a/themes/skycoin/static/css/scss/main.scss
+++ b/themes/skycoin/static/css/scss/main.scss
@@ -11,6 +11,7 @@
 @import "button";
 @import "container";
 @import "header";
+@import "wordcount";
 @import "footer";
 @import "nav";
 @import "logo";
