--- a/themes/skycoin/layouts/_default/single.html
+++ b/themes/skycoin/layouts/_default/single.html
@@ -20,6 +20,11 @@
 
   <section class="post__content">
     {{ .Content }}
+    {{ if eq .Lang "en" }}
+    <wordcount class="wordcount">
+    Translation bounty: {{ mul 5 (add 1 (div .WordCount 500)) }} SKY ({{ .WordCount }} words)
+    </wordcount>
+    {{ end }}
   </section>
 </main>
 
