--- a/themes/skycoin/static/css/scss/_header.scss
+++ b/themes/skycoin/static/css/scss/_header.scss
@@ -5,6 +5,16 @@
     position: relative;
     text-align: center;
     margin: 0 auto;
+
+    @media (max-width: $breakpoint-sm) {
+      margin-bottom: .8rem;
+    }
+  }
+
+  &__btn {
+    @media (max-width: $breakpoint-sm) {
+      margin: 0 auto;
+    }
   }
 
   &-dropdown__current {
@@ -89,6 +99,11 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+
+    @media (max-width: $breakpoint-sm) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__link {
