--- a/themes/skycoin/static/css/scss/_post.scss
+++ b/themes/skycoin/static/css/scss/_post.scss
@@ -25,6 +25,11 @@
     margin-bottom: 2rem;
   }
 
+  li > ul {
+    margin-bottom: 0;
+    margin-top: 0.5rem;
+  }
+
   ul {
     padding-left: 1rem;
     margin-bottom: 2rem;
