Reduce bounties due to price increase

--- a/themes/skycoin/layouts/_default/single.html
+++ b/themes/skycoin/layouts/_default/single.html
@@ -23,8 +23,8 @@
     {{ if eq .Lang "en" }}
       <wordcount class="wordcount">
       {{ if .Params.bounty }}
-        <p>Translation bounty for Русский, 한국어, 日本語, 中文: {{ mul .Params.bounty 2 }} SKY</p>
-        <p>Translation bounty for other languages: {{ .Params.bounty }} SKY</p>
+        <p>Translation bounty for Русский, 한국어, 日本語, 中文: {{ div .Params.bounty 2 }} SKY</p>
+        <p>Translation bounty for other languages: {{ div .Params.bounty 4 }} SKY</p>
       {{ else }}
         No translation bounty
       {{ end }}
