--- a/themes/skycoin/layouts/_default/single.html
+++ b/themes/skycoin/layouts/_default/single.html
@@ -26,8 +26,9 @@
         <p>Translation bounty for Русский, 한국어, 日本語, 中文: {{ div .Params.bounty 2.0 }} SKY</p>
         <p>Translation bounty for other languages: {{ div .Params.bounty 4.0 }} SKY</p>
       {{ else }}
-        No translation bounty
+        <p>No translation bounty</p>
       {{ end }}
+      <p>Read about the <a href="https://blog.skycoin.net/statement/skycoin-bounty-program-1/">Skycoin Bounty Program</a></p>
       </wordcount>
     {{ end }}
   </section>
